--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -652,8 +652,8 @@
                 if(!$('.wa-rank-list div:hidden').length == 0){
         			$('.wa-loading-more').show();
        			}
-       			if($('.wa-rank-list > div').length == 0 && (search_name || search_name != '')){
-					wuiAlert('该分组无选手');
+       			if($('.wa-rank-list > div').length == 0){
+					wuiAlert('暂无选手');
 				}
                 loadingStatus();
             },
