--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
@@ -49,6 +49,7 @@
         padding: 5px;
         font-family: '黑体';
         font-size: 1rem;
+        width: 68%;
     }
     .wui-i-shvoteParticipance-content-lable {
         margin-bottom: 10px;
@@ -146,8 +147,8 @@
                 </div>
             </div>
             <div class="wui-i-shvoteParticipance-content-line">
-                <div class="wui-i-shvoteParticipance-content-lable">输入编号</div>
-                <input class="wui-i-input wa-serial" data-validate="require-notempty::请输入编号" placeholder="输入报名序号"/>
+                <div class="wui-i-shvoteParticipance-content-lable">输入序号</div>
+                <input class="wui-i-input wa-serial" data-validate="require-notempty::请输入序号" placeholder="输入报名序号"/>
             </div>
             <div style="padding: 10px 0 0 10px;width: 95%;margin-left: 2%;">
                 <div class="wui-i-shvoteParticipance-content-lable">内容简介</div>
