--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -107,7 +107,7 @@
 						<!-- 三级导航 -->
 						{% if nav.third_navs %}
 							{% for third_nav in nav.third_navs %}
-                                {% if third_nav.name == 'exsurveies' or third_nav.name == 'cardExchange' %}
+                                {% if third_nav.name == 'exsurveies' or third_nav.name == 'cardExchange' or third_nav.name == 'shvotes'%}
                                     {% if request.manager.username in third_nav.users %}
                                     <li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
                                         <a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
@@ -119,16 +119,6 @@
                                     {% endif %}
                                 {% elif third_nav.name == 'groups' %}
                                 	{% if request.user_profile.webapp_type != 1 %}
-                                    <li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
-                                        <a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
-                                            &nbsp;&nbsp;&nbsp;&nbsp;{{third_nav.title|safe}}
-                                            <i class="xui-icon-arrow"></i>
-                                            {% if third_nav.class_name %}<i class="xui-noticyTip {{third_nav.class_name}}"></i>{% endif %}
-                                        </a>
-                                    </li>
-                               		{% endif %}
-                                {% elif third_nav.name == 'shvotes' %}
-                                	{% if request.user.username == 'jierunda' or request.user.username == 'jobs' %}
                                     <li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
                                         <a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
                                             &nbsp;&nbsp;&nbsp;&nbsp;{{third_nav.title|safe}}
