--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_participance.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_participance.html
@@ -4,7 +4,7 @@
 <div class="xui-ShvoteParticipanceFormPage xui-appPage-commonStyle">
 	<ul class="breadcrumb" style="margin-bottom:-12px;">
 		<li>您当前所在位置</li>
-		<li><a href="/apps/">百宝箱</a></li>
+		<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
 		<li><a href="/apps/shvote/shvotes/">高级投票</a></li>
 		<li class="active">新建高级投票</li>
 	</ul>
