--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -15,7 +15,7 @@
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
-			<li><a href="/apps/">百宝箱</a></li>
+			<li><a href="/apps/lottery/lotteries/">百宝箱</a></li>
 			<li><a href="/apps/shvote/shvotes/">高级投票</a></li>
 			<li class="active">报名详情</li>
 		</ul>
