修改编辑优惠劵商品名称折行问题

--- a/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
@@ -215,7 +215,7 @@ margin-top: -29px;"></div>
                 <div class="xui-i-sellout">待售</div>
                 {% endif %}
               </div>
-              <div class="ml10 fl">
+              <div class="ml10 fl w400">
                 <div class="mb25">
                   <a href="{{product.detail_link}}" target="_blank">{{product.name}}</a>
                 </div>
