修复百宝箱高级投票创建选手的bug

--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
@@ -237,8 +237,13 @@
 <script type="text/javascript">
 $(document).ready(function() {
     var action = {% if action %}true{% else %}false{% endif %};
+    var record_status = {% if record_status %}true{% else %}false{% endif %};
     if(!action){
         W.showHint('error', '选手信息出错~');
+        return false;
+    }
+    if(!record_status){
+        W.showHint('error', '活动信息出错~');
         return false;
     }
 	$('.wa-submit').click(function(event) {
