--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -352,7 +352,7 @@
 				<div class="wui-searchBox">
 					<input type="text" class="wui-search-input wa-search-text" placeholder="请输入关键字" maxlength="20">
 					<button type="button" class="wui-searchBtn wa-search">搜索</button>
-					<p>选手列表是根据选手票数由多到少排列，显示前100名。如果需要查找100名以外的选手请在搜索栏输入选手报名序号或选手名称即可。</p>
+					<p>选手列表是根据选手票数由多到少排列，显示前100名。如果需要查找100名以外的选手请在搜索栏输入选手报名序号。</p>
 				</div>
 			</div>
 
