--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
@@ -148,7 +148,7 @@
             </div>
             <div class="wui-i-shvoteParticipance-content-line">
                 <div class="wui-i-shvoteParticipance-content-lable">输入序号</div>
-                <input class="wui-i-input wa-serial" type="number" data-validate="require-notempty::请输入序号" placeholder="输入报名序号"/>
+                <input class="wui-i-input wa-serial" type="number" data-validate="require-notempty::请输入序号,,require-int::只能输入数字" placeholder="输入报名序号"/>
             </div>
             <div style="padding: 10px 0 0 10px;width: 95%;margin-left: 2%;">
                 <div class="wui-i-shvoteParticipance-content-lable">内容简介</div>
