--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -35,16 +35,13 @@
         }
         .xui-propertyView-app-GroupInfo textarea{
             height: 180px !important;
-            width: 80% !important;
-            margin-left: 80px;
+            margin-left: 100px !important;
         }
         .xui-propertyView-app-GroupInfo .propertyGroup_property_textareaField .errorHint{
             margin-left:80px;
         }
         .xui-propertyView-app-GroupInfo .propertyGroup_property[data-field-anchor="share_description"]{
           margin-top: 15px;
-          margin-left: 4px;
-
         }
         .xui-image-dialog-trigger{
           background: url('/static_v2/img/termite2/addImgBtn.png') no-repeat;
