增加商品列表的延迟加载

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -59,6 +59,7 @@
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/swipeMask.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/validate.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/swipeImage.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/lib/lazyload.js"></script>
 
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/weshopBottomNav.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/weshopSideNav.js"></script>
