微商城首页图片优化，增加延迟加载图片

--- a/weapp/termite/static/termite_js/app/component/wepage/itemlist/itemlist.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/itemlist/itemlist.html
@@ -16,7 +16,7 @@
                 >
                     <div class="wui-inner-pic">
                         {% if product.thumbnails_url %}
-                        <img data-url="{{product.thumbnails_url}}" />
+                        <img src="{{product.thumbnails_url}}" />
                         {% else %}
                         <p class="xui-productTitle">{% firstof product.name '商品列表' %}</p>
                         {% endif %}
