--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -21,8 +21,8 @@
 					<a href="{{ fans_host }}/auth/account_help/" target="_blank"><i class="xui-toolIcon"></i>权限管理</a>
 					<a href="javascript:void(0);" data-toggle="popover" id="mf"><i class="xui-toolIcon"></i>修改密码</a>
 				{% endif %}
-					<a href="javascript:void(0);" id="mf_message"  data-toggle="popover" target="_blank" id="message_href"><i class="xui-toolIcon"></i>系统通知<i class="xui-noticyTip" style="display:none" id ="message_count"></i></a>
-					<div class="popover bottom in" role="tooltip" id="popover838423" style="left: 132.594px; top: 16px; display: block;"><div class="popover-content" style="min-height:30px;width:170px;line-height:30px;text-algin:center;padding:1px 0px 0px 15px">
+					<a href="javascript:void(0);" data-toggle="popover" target="_blank" style="margin-right:13px;" id="message_href"><i class="xui-toolIcon"></i>系统通知<i class="xui-noticyTip" style="display:none" id ="message_count"></i></a>
+					<div class="popover bottom in" role="tooltip" id="popover838423" style="left: 132.594px; top: 16px; display: none;"><div class="popover-content" style="min-height:30px;width:170px;line-height:30px;text-algin:center;padding:1px 0px 0px 15px">
 						<span id="message_count_inner"></span>条新消息通知 <a href="http://fans.dev.com/message/message_list/?from=portal" target="_blank" style="color:blue;">查看</a>
 					</div></div>
 				{% if request.user.username == 'malla' or request.user.username == 'ceshi01' or request.user.username == 'jobs' %}
