将微信回复消息文本内容的行为改成无格式粘贴

--- a/weapp/weixin/message/material/templates/material/detail.html
+++ b/weapp/weixin/message/material/templates/material/detail.html
@@ -31,7 +31,7 @@
         	<img src="{{ pic_url }}" />
         </div>
         {% endif %}
-        <div class="newsDetail-detail mt10 rawHtml">
+        <div class="newsDetail-detail mt10 rawHtml wa-rawHtml">
             {{ detail|safe }}
         </div>
     </div>
@@ -39,4 +39,10 @@
 {% endblock %}
 
 {% block js %}
+    <script>
+        $(function(){
+            $(".wa-rawHtml img").parent().css("line-height", 0);
+        });
+    </script>
+
 {% endblock %}
