--- a/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
@@ -368,8 +368,9 @@
 			el: '#edit-message-panel',
 			richTextEditorWidth: 800,
 			enableSubmitBtn: 'false',
-			enableCanelBtn: 'false'
-		}
+			enableCanelBtn: 'false',
+            pasteplain: true
+		};
 		if (answerContent) {
 			if (answerContent.type === 'text') {
 				options.answer = answerContent.content;
