--- a/weapp/weixin2/templates/weixin/message/follow_rules.html
+++ b/weapp/weixin2/templates/weixin/message/follow_rules.html
@@ -42,8 +42,9 @@ $(document).ready(function() {
         el: '#edit-message-panel',
         cancelBtnText: '清除内容',
         submitBtnText:'保&nbsp;&nbsp;存',
-        richTextEditorWidth: '500'
-    }
+        richTextEditorWidth: '500',
+        pasteplain: true
+    };
     if (rule) {
         method = 'post';
         var answer = rule.answer;
