--- a/weapp/weixin2/templates/weixin/message/message_tails.html
+++ b/weapp/weixin2/templates/weixin/message/message_tails.html
@@ -73,6 +73,7 @@
             maxCount: 600,
             width: 600,
             height:250,
+            pasteplain: true
         });
 		editor.bind('contentchange', function() {}, this);
 		editor.render();
