--- a/weapp/weixin2/templates/weixin/message/unmatch_rules.html
+++ b/weapp/weixin2/templates/weixin/message/unmatch_rules.html
@@ -154,6 +154,7 @@ $(document).ready(function() {
 		width: 490,
 		offset_Y:18,
 		offset_X:-31,
+        pasteplain: true
 	});
 
 	messageEditorPopup.bind('cancel-edit', function() {
