--- a/weapp/weixin2/templates/weixin/message/mass_sending_messages.html
+++ b/weapp/weixin2/templates/weixin/message/mass_sending_messages.html
@@ -165,7 +165,8 @@ $(document).ready(function() {
         el: '#edit-message-panel',
         richTextEditorWidth: '600',
         submitBtnText: '群&nbsp;&nbsp;发',
-        help:"注：群发时，图文若设置了“链接地址”，手机端会先显示正文内容，然后点击左下角的“阅读原文”可跳转至该链接页面！"
+        help:"注：群发时，图文若设置了“链接地址”，手机端会先显示正文内容，然后点击左下角的“阅读原文”可跳转至该链接页面！",
+        pasteplain: true
     });
 
     editor.bind("finish-edit", function(message){
