--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -182,7 +182,7 @@
 							    ${data.supplier[group.id]}
 							{{/if}}
 							{{if group.supplier_user_id > 0 }}
-								${data.supplier_users[group.supplier_user_id]}
+								同-${data.supplier_users[group.supplier_user_id]}
 							{{/if}}
                         {{else}}
                             {{if order.supplier_user_id > 0}}
