任务 9154 自营平台-订单列表-增加筛选条件; 需求 9139 “同”icon; 需求 9141 供货商名称不折行，超出增加‘...’，鼠标悬浮显示全部

--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -123,7 +123,7 @@
 					</td>
 					<td>
 					{{if data.data.mall_type == 1 }}
-						{{if product.is_sync }} 同- {{/if}}
+						{{if product.is_sync }}<i class="xui-icon-sync">同</i>{{/if}}
 						${product.store_name}
 					{{else}}
 						${product.bar_code}
