--- a/weapp/mall/templates/mall/editor/onshelf_products.html
+++ b/weapp/mall/templates/mall/editor/onshelf_products.html
@@ -121,7 +121,7 @@
 						</div>
 					</td>
 					<td>{{if data.data.mall_type == 1}}
-							{{if product.is_sync }} 同- {{/if}}
+							{{if product.is_sync }}<i class="xui-icon-sync">同</i>{{/if}}
 							${product.store_name}
 						{{else}}
 							${product.bar_code}
